Tried to fix alignment of unit circle

--- a/src/styles/Exercises/UnitCircleExercise.scss
+++ b/src/styles/Exercises/UnitCircleExercise.scss
@@ -6,6 +6,7 @@
   //width: calc(550px + 1vw);
   margin-bottom: 2%;
   margin-left: 25%;
+  margin-right: 25%;
   margin-top: 5%;
   position: relative;
   width: 400px;
